# RF-DETR-tensorRT-deploy

./: CMakeLists.txt  main11.cpp  main13.cpp  pytrt.py  readme.md
src/: TrtModel.cpp  TrtModel.hpp  utils.hpp
weights/: inference_model.sim.onnx
